--- a/Teba/MovieFire_ApiRest/package.json
+++ b/Teba/MovieFire_ApiRest/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "express-validator": "^5.3.1",
+    "firebase-admin": "^7.3.0"
   }
 }
