--- a/Teba/MovieFire_ApiRest/package.json
+++ b/Teba/MovieFire_ApiRest/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
-    "firebase-admin": "^7.3.0"
+    "firebase": "^6.0.2",
+    "validator": "^10.11.0"
   }
 }
