--- a/Teba/MovieFire_ApiRest/package.json
+++ b/Teba/MovieFire_ApiRest/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
     "firebase": "^6.0.2",
+    "got": "^9.6.0",
     "validator": "^10.11.0"
   }
 }
