--- a/Teba/MovieFire_ApiRest/package.json
+++ b/Teba/MovieFire_ApiRest/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
     "firebase": "^6.0.2",
     "got": "^9.6.0",
+    "helmet": "^3.18.0",
     "validator": "^10.11.0"
   }
 }
