--- a/Teba/MovieFire_ApiRest_SQL/package.json
+++ b/Teba/MovieFire_ApiRest_SQL/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "got": "^9.6.0"
+    "got": "^9.6.0",
+    "mysql": "^2.17.1"
   }
 }
